# ff

./: Dockerfile  LICENSE  README.md  counter.py  pyproject.toml  test_counter.py
.github/workflows/: main.yml
ff/: __init__.py  cmdline.py  filehandler.py
tests/: conftest.py  test_cmdline.py  test_filehander.py  test_version.py
